Left align email label text in create alert form. May fix #533.

--- a/app/assets/stylesheets/partials/_form.scss
+++ b/app/assets/stylesheets/partials/_form.scss
@@ -128,6 +128,9 @@ body form.alert {
   p {
     margin-bottom: 1em;
   }
+  .email label {
+    text-align: left;
+  }
 }
 
 form.donate {
